tests/ui/typeck/typeck-builtin-bound-type-parameters.stderr
error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:1:11
   |
LL | fn foo1<T:Copy<U>, U>(x: T) {}
   |           ^^^^--- help: remove these generics
   |           |
   |           expected 0 generic arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:4:14
   |
LL | trait Trait: Copy<dyn Send> {}
   |              ^^^^---------- help: remove these generics
   |              |
   |              expected 0 generic arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:7:21
   |
LL | struct MyStruct1<T: Copy<T>>;
   |                     ^^^^--- help: remove these generics
   |                     |
   |                     expected 0 generic arguments

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:10:25
   |
LL | struct MyStruct2<'a, T: Copy<'a>>;
   |                         ^^^^---- help: remove these generics
   |                         |
   |                         expected 0 lifetime arguments

error[E0107]: trait takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:13:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^ -- help: remove this lifetime argument
   |               |
   |               expected 0 lifetime arguments

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/typeck-builtin-bound-type-parameters.rs:13:15
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |               ^^^^     - help: remove this generic argument
   |               |
   |               expected 0 generic arguments

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0107`.
